--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,10 @@
     "name": "codeigniter-installer",
     "require": {
         "codeigniter/framework": "3.1.*"
+    },
+    "scripts" : {
+        "post-package-install": [
+            "php install.php"
+        ]
     }
-
 }
