--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
         "codeigniter/framework": "3.1.*"
     },
     "scripts" : {
-        "post-package-install": [
+        "post-create-project-cmd": [
             "php install.php"
         ]
     }
